[package]
name = "solana_mirror"
version = "0.1.0"
edition = "2021"
description = "A Rust SDK for exploring a given Solana wallet"
repository = "https://github.com/solana-mirror/rust-sdk"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mpl-token-metadata = "4.1.2"
solana-sdk = "2.0.5"
solana-program = "1.14.14"
spl-token = "6.0.0"
base64 = "0.22.1"
jupiter-swap-api-client = "0.1.0"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
uuid = { version = "1.3.1", features = [ "v4"] }
bincode = "1.3.3"
dotenv = "0.15" 
once_cell = "1.20.2"

[features]
examples = []

[lib]
name = "solana_mirror"
path = "src/lib.rs"
